# camtrapmz-data-analysis-gui

./: .gitignore  README.md  pyproject.toml
app/tests/data/input/: Test.xlsx  sourcedata.xlsx
app/tests/data/output/: camera_trap_Bird-Ferret-Rodent-Stoat_bin7_2025-08-01_output.xlsx  camera_trap_output.xlsx
camtrapnz/src/: analysis.py  gui.py  gui_tt.py  main.py  plotter.py
camtrapnz/tests/: test_camera_utils.py
